test/failing/unterminated_comment.c
int main() {
    int a;
    int b;
    /* This is a comment that is not closed
}